--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,8 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="page"></div>
+    <div id="modals"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
